css/style.css
/* ... */
.unselectable {
	-moz-user-select: -moz-none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-o-user-select: none;
	user-select: none;
}

html {
	height: 100%;
}

body {
	min-height: 100%;
}

/* custom scrollbars */
::-webkit-scrollbar {
	width: 9px;
	height: 9px;
}

::-webkit-scrollbar-track {
	background: transparent;
}

::-webkit-scrollbar-thumb {
	background: #cbcbcb;
}

header {
	margin-bottom: 2px;
	padding: 2px 15px;
}

header h1 {
	margin-right: 10px;
	display: inline;
}

header h1::after {
	content: ".";
}

header p {
	display: inline;
	font-style: italic;
	color: #d0d0d0;
}

#navigation {
	position: relative;
}

.viewport-wrapper {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	display: flex;
	flex-flow: column nowrap;
	overflow: auto;
}

.view-col-wrapper {
	display: flex;
	flex-direction: row;
	max-height: 100%;
	height: 100%;
}

@media (max-width: 991px) {
	.viewport-wrapper {
		bottom: auto;
	}

	.view-col-wrapper {
		flex-direction: column;
		max-height: none;
		height: auto;
	}

	ul.list {
		max-height: 40em;
	}
}

/* omnisearch */
.omnisearch-output-wrapper {
	width: 100%;
	justify-content: flex-end;
	display: none;
}

.omnisearch-output {
	padding: 0.2em 0.7em;
	border-radius: 0.2em;
	z-index: 100;
	position: absolute;
	box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
	border: 1px solid rgba(0, 0, 0, 0.15);
}

.omnisearch-output p {
	margin: 0;
	display: flex;
	justify-content: space-between;
}

div.omnisearch-pagination-wrapper {
	display: flex;
	justify-content: space-between;
}

div.omnisearch-pagination-wrapper > span {
	display: inline-block;
	user-select: none;
	padding: 2px;
	font-size: 1.1em;
	min-width: 20px;
}

div.omnisearch-pagination-wrapper > .pg-control {
	cursor: pointer;
}

div.omnisearch-pagination-wrapper > .pg-left {
	margin-right: auto;
}

div.omnisearch-pagination-wrapper > .pg-count {
	margin: 0 auto;
}

div.omnisearch-pagination-wrapper > .pg-right {
	margin-left: auto;
}

@media only screen and (min-width: 320px) {
	.omnisearch-output {
		max-width: 300px;
		min-width: 270px;
	}
}

@media only screen and (min-width: 480px) {
	.omnisearch-output {
		max-width: 460px;
		min-width: 430px;
	}
}

@media only screen and (min-width: 768px) {
	.omnisearch-output {
		max-width: 740px;
		min-width: 500px;
	}
}

/* *** */

.delete-icon.glyphicon {
	color: rgba(255, 255, 255, 0.7);
	cursor: pointer;
	font-size: 12px;
	padding: 2px;
	margin-left: auto;
	top: 0;
}

/* hoverbox */
.hoverlink {
	position: fixed;
	background: transparent;
	z-index: 202;
}

.hoverbox {
	position: fixed;
	max-width: 600px;
	z-index: 200;
	box-shadow: 0 0 12px 0 rgba(0, 0, 0, 1);
	max-height: 100vh;
	overflow-y: auto;
}

.hoverbox::-webkit-scrollbar-track {
	background: #a0a0a0;
}

.hoverbox::-webkit-scrollbar {
	width: 4px;
}

.hoverbox > table.stats {
	border-radius: 0;
}

.hoverbox th.name {
	font-size: 1.6em;
}

.hoverbox p {
	margin-bottom: 5px;
}

.hoverbox .hoverborder {
	min-height: 3px;
	max-height: 16px;
	text-align: right;
}

.hoverbox .hoverborder.top {
	cursor: move;
	user-select: none;
	display: flex;
	justify-content: space-between;
}

.hoverbox .hoverborder .glyphicon {
	display: none;
}

.hoverbox .hoverborder[data-perm=true] .glyphicon {
	display: block;
}

.hoverbox .hoverborder .window-title {
	font-size: 12px;
	padding: 1px 0;
	display: none;
	font-family: 'Andada', serif;
	font-variant: small-caps;
	text-transform: uppercase;
	font-weight: bold;
	margin-left: 4px;
	flex-shrink: 0;
}

.hoverbox .hoverborder[data-display-title=true] .window-title {
	display: block;
}

.hoverborder[data-display-title=true] ~ table.stats,
.hoverborder[data-display-title=true] ~ .hoverborder {
	display: none;
}

.hoverbox td div.border {
	height: 2px;
	background-color: #922610;
	margin: 0 3px;
	padding: 0;
	border-right: 5px transparent;
}

.summary-flexer {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	align-items: flex-start;
	align-content: flex-start;
}

/* *** */

/* homebrew manager */

.homebrew-overlay {
	position: fixed;
	z-index: 1000;
	background-color: rgba(69, 69, 69, 0.51);
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}

.homebrew-window {
	position: relative;
	margin: 60px auto;
	padding: 5px 10px;
	max-height: 600px;
	max-width: 600px;
	overflow-y: scroll;
	z-index: 10001;
	float: none;
	top: initial;
	left: initial;
}

.homebrew-window hr {
	margin: 5px 0;
}

/* *** */

.view-col {
	margin: 7px 7px 12px;
	flex: 1;
	position: relative;
}

#listcontainer.view-col {
	display: flex;
	flex-flow: column nowrap;
}

#contentwrapper.view-col {
	overflow-y: auto;
}

main {
	padding: 10px 15px;
}

footer {
	padding: 20px 15px;
	font-size: 90%;
}

.hidden {
	display: none;
}

.bold {
	font-weight: bold;
}

.italic {
	font-style: italic;
}

.float-end {
	float: none;
}

input.search {
	width: 62%;
}

form#filtertools {
	font-size: 0.8em;
}

form#filtertools select {
	margin: 1px;
}

form#filtertools small:hover {
	cursor: pointer;
}

#pointbuy input {
	margin: 2px;
	text-align: right;
	width: 3em;
}

#pointbuy input[type=number] {
	-moz-appearance: textfield;
}

.sortlabel {
	display: block;
}

ul.list {
	position: relative;
	list-style-type: none;
	padding-left: 0;
	height: 100%;
	overflow-y: auto;
	overflow-x: hidden;
	padding-top: 1em;
	clear: both;
	font-size: 0.8em;
}

ul.list li {
	padding: 1px;
	cursor: pointer;
	display: block;
	border-bottom: 1px solid #ddd;
	max-height: 3em;
	overflow-y: hidden;
}

ul.list li:hover {
	max-height: 100%;
}

ul.list li:active {
	color: white;
}

ul.list li span.name {
	font-weight: bold;
}

ul.list li span.level,
ul.list li span.classes,
ul.list li span.school {
	display: inline-block;
	text-transform: capitalize;
}

ul.list li:hover span {
	display: block;
}

th.name span.stats-name {
	float: left;
}

th.name span.stats-source {
	float: right;
}

.monster th.name span.source {
	position: relative;
	margin-right: 0.2em;
}

span.sourcePHB {
	color: #4a6898;
}

span.sourceDMG {
	color: purple;
}
/* ... */

